--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>My Website Page</title>
+        <h1>Je suis un titre MASTER</h1>
+        <h2>Je suis un nouveau sous-titre</h2>
     </head> 
     <body>
         <h1>Je suis un titre MASTER</h1>
